HIP-52 Fix bug that caused clicks near left logo to shift page

--- a/src/Traffk.Portal/wwwroot/css/styles.css
+++ b/src/Traffk.Portal/wwwroot/css/styles.css
@@ -1141,6 +1141,11 @@ h3 {
     margin-bottom: 40px;
 }
 
+ul.navbar-left {
+    padding-right: 0px;
+    padding-left: 0px;
+}
+
 @media (min-width: 1200px) {
         .container {
         width: 90%;
